--- a/server/deno.json
+++ b/server/deno.json
@@ -1,6 +1,11 @@
 {
   "imports": {
-    "hono": "jsr:@hono/hono@^4.7.8"
+    "@types/pg": "npm:@types/pg@^8.11.14",
+    "dotenv": "npm:dotenv@^16.5.0",
+    "drizzle-kit": "npm:drizzle-kit@^0.31.1",
+    "drizzle-orm": "npm:drizzle-orm@^0.43.1",
+    "hono": "jsr:@hono/hono@^4.7.8",
+    "tsx": "npm:tsx@^4.19.4"
   },
   "tasks": {
     "start": "deno run --allow-net main.ts"
