--- a/server/deno.json
+++ b/server/deno.json
@@ -8,7 +8,7 @@
     "pg": "npm:pg@^8.15.6"
   },
   "tasks": {
-    "start": "deno run --allow-net main.ts",
+    "start": "deno run --env --allow-net main.ts",
     "migrate:generate": "deno run -A --node-modules-dir npm:drizzle-kit generate",
     "migrate": "deno run -A --node-modules-dir npm:drizzle-kit migrate"
   },
